[tool.poetry]
name = "pc-forestry"
version = "0.2.0"
description = ""
authors = ["EenTweeDrie <eentweedrie@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pc_forestry"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.7.0"
numpy = "^2.2.5"
open3d = "^0.19.0"
laspy = "^2.5.4"
pyvista = "^0.45.2"
urllib3 = "<2.0"
lzf = "^0.1"
h5py = "^3.13.0"
hdbscan = "^0.8.40"
circle-fit = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
